--- a/Rails/assign1/Gemfile
+++ b/Rails/assign1/Gemfile
@@ -31,7 +31,6 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
-gem 'pry'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
@@ -47,4 +46,6 @@ group :development do
 end
 
 gem 'awesome_print'
+gem 'hirb'
+gem 'table_print'
 
