--- a/Rails/twit3/Gemfile
+++ b/Rails/twit3/Gemfile
@@ -6,6 +6,7 @@ gem 'table_print'
 gem 'bootstrap-sass'
 gem 'awesome_print'
 gem 'paperclip', '~> 4.1'
+gem 'will_paginate', '~> 3.1.0'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
 # Use sqlite3 as the database for Active Record
