--- a/Rails/twit3/Gemfile
+++ b/Rails/twit3/Gemfile
@@ -7,6 +7,8 @@ gem 'bootstrap-sass'
 gem 'awesome_print'
 gem 'paperclip', '~> 4.1'
 gem 'will_paginate', '~> 3.1.0'
+gem 'carrierwave', '~> 1.0'
+gem 'mini_magick', '~> 4.3'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
 # Use sqlite3 as the database for Active Record
