--- a/Rails/twit4/Gemfile
+++ b/Rails/twit4/Gemfile
@@ -12,6 +12,8 @@ gem 'mini_magick', '~> 4.3'
 gem 'omniauth-facebook'
 gem "omniauth-google-oauth2"
 gem 'omniauth-twitter'
+gem 'open-weather'
+gem 'open-weather-api'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
 # Use sqlite3 as the database for Active Record
